--- a/src/css/style.css
+++ b/src/css/style.css
@@ -173,8 +173,7 @@ nav {
   padding: 71px 0 65px 0;
 }
 
-.advantages .mini_heading,
-.mobile_app .mini_heading {
+.label_block {
   /* block styles */
   width: 112px;
   height: 24px;
@@ -188,7 +187,7 @@ nav {
   padding: 6px 10px 6px 12px;
 }
 
-.advantages .advantages_heading {
+.title_heading {
   color: #222222;
   font-size: 38px;
   font-weight: 700;
