--- a/src/sass/style.sass
+++ b/src/sass/style.sass
@@ -13,7 +13,11 @@ nav
 	top: 0
 
 .menu
+	display: -webkit-box
+	display: -ms-flexbox
 	display: flex
+	-webkit-box-pack: justify
+	-ms-flex-pack: justify
 	justify-content: space-between
 	padding: 13px 70px
 	margin: 0
@@ -23,8 +27,8 @@ nav
 		border-right: 2px dotted black
 		padding-right: 28px
 
-		&:last-child
-			border: none
+	&:last-child
+		border: none
 
 	.menu_link
 		color: #ffffff
@@ -77,9 +81,11 @@ nav
 	width: 172px
 	height: 46px
 	margin-top: 19px
+	-webkit-box-shadow: inset 0 -3px 0 rgba(0, 0, 0, 0.12)
 	box-shadow: inset 0 -3px 0 rgba(0, 0, 0, 0.12)
 	border: none
 	border-radius: 6px
+	background-image: -webkit-gradient(linear, left bottom, left top, from(#1eacc7), to(#4ce2ff))
 	background-image: linear-gradient(to top, #1eacc7 0%, #4ce2ff 100%)
 	text-shadow: 1px 1px 0 rgba(0, 0, 0, 0.21)
 	color: #ffffff
@@ -124,9 +130,11 @@ nav
 		width: 259px
 		height: 63px
 		margin: 113px auto 0 auto
+		-webkit-box-shadow: inset 0 -4px 0 rgba(0, 0, 0, 0.12)
 		box-shadow: inset 0 -4px 0 rgba(0, 0, 0, 0.12)
 		border: none
 		border-radius: 6px
+		background-image: -webkit-gradient(linear, left bottom, left top, from(#1eacc7), to(#4ce2ff))
 		background-image: linear-gradient(to top, #1eacc7 0%, #4ce2ff 100%)
 		text-shadow: 1px 1px 0 rgba(0, 0, 0, 0.21)
 		color: #ffffff
@@ -138,7 +146,7 @@ nav
 	min-height: 900px
 	padding: 71px 0 65px 0
 
-.label_block
+.label
 	width: 112px
 	height: 24px
 	background-color: #000000
@@ -149,7 +157,7 @@ nav
 	text-transform: uppercase
 	padding: 6px 10px 6px 12px
 
-.title_heading
+.title
 	color: #222222
 	font-size: 38px
 	font-weight: 700
@@ -159,14 +167,25 @@ nav
 	margin-bottom: 0
 
 .advantages_item
+	display: -webkit-box
+	display: -ms-flexbox
 	display: flex
+	-ms-flex-pack: distribute
 	justify-content: space-around
+	-webkit-box-align: center
+	-ms-flex-align: center
 	align-items: center
 	margin-top: 35px
 
 .advantages_round
+	display: -webkit-box
+	display: -ms-flexbox
 	display: flex
+	-webkit-box-pack: center
+	-ms-flex-pack: center
 	justify-content: center
+	-webkit-box-align: center
+	-ms-flex-align: center
 	align-items: center
 	width: 113px
 	height: 113px
@@ -177,6 +196,7 @@ nav
 	max-width: 341px
 
 	&:last-child
+		-ms-flex-item-align: start
 		align-self: flex-start
 
 	h3
@@ -192,9 +212,8 @@ nav
 		font-weight: 300
 		line-height: 21px
 		margin: 0
-
-/* mobile app section START *///I
-.mobile_app
+// mobile section start
+.mobile
 	min-height: 900px
 	background: url("/src/image/mobile_app/bg/mobile_app_bg.jpg") center (center / cover) no-repeat
 	padding: 48px 0 80px 0
