--- a/src/sass/style.sass
+++ b/src/sass/style.sass
@@ -1,6 +1,5 @@
 *
 	font-family: "Roboto", sans-serif
-
 .label
 	width: 112px
 	height: 24px
@@ -11,7 +10,6 @@
 	font-weight: 400
 	text-transform: uppercase
 	padding: 6px 10px 6px 12px
-
 .title
 	color: #222222
 	font-size: 38px
@@ -20,10 +18,8 @@
 	text-align: center
 	margin-top: 38px
 	margin-bottom: 0
-
 header
 	position: relative
-
 nav
 	height: 50px
 	background-color: #212121
@@ -31,93 +27,74 @@ nav
 	left: 0
 	right: 0
 	top: 0
-
 .menu
-	display: -webkit-box
-	display: -ms-flexbox
 	display: flex
-	-webkit-box-pack: justify
-	-ms-flex-pack: justify
 	justify-content: space-between
 	padding: 13px 70px
 	margin: 0
 	list-style-type: none
-
 	.menu_item
 		border-right: 2px dotted black
 		padding-right: 28px
-
-	&:last-child
-		border: none
-
+		&:last-child
+			border: none
 	.menu_link
 		color: #ffffff
 		font-size: 15px
 		font-weight: 300
-
 .subheader
 	position: absolute
 	width: 100%
 	height: 84px
 	background-color: rgba(0, 0, 0, 0.6)
 	margin-top: 50px
-
 	.subheader_logo
 		display: block
 		max-width: 100%
 		margin-top: 16px
-
 	.subheader_official
 		opacity: 0.5
 		color: #ffffff
 		font-size: 13px
 		font-weight: 400
 		margin-top: 6px
-
 	.call_block
 		margin-left: 167px
-
 	.subheader_call
 		color: #ffffff
 		font-size: 12px
 		font-weight: 300
 		margin-top: 19px
 		text-align: right
-
-	a.subheader_phone
-		display: block
+	a
+		&.subheader_phone
+			display: block
+			color: #ffffff
+			font-size: 22px
+			font-weight: 400
+			text-transform: uppercase
+			text-align: right
+			margin-top: 8px
+			line-height: 12px
+	.subheader_btn
+		width: 172px
+		height: 46px
+		margin-top: 19px
+		box-shadow: inset 0 -3px 0 rgba(0, 0, 0, 0.12)
+		border: none
+		border-radius: 6px
+		background-image: linear-gradient(to top, #1eacc7 0%, #4ce2ff 100%)
+		text-shadow: 1px 1px 0 rgba(0, 0, 0, 0.21)
 		color: #ffffff
-		font-size: 22px
+		font-size: 14px
 		font-weight: 400
 		text-transform: uppercase
-		text-align: right
-		margin-top: 8px
-		line-height: 12px
-
 .call_btn_block
 	margin-left: 10px
-
-.subheader .subheader_btn
-	width: 172px
-	height: 46px
-	margin-top: 19px
-	-webkit-box-shadow: inset 0 -3px 0 rgba(0, 0, 0, 0.12)
-	box-shadow: inset 0 -3px 0 rgba(0, 0, 0, 0.12)
-	border: none
-	border-radius: 6px
-	background-image: -webkit-gradient(linear, left bottom, left top, from(#1eacc7), to(#4ce2ff))
-	background-image: linear-gradient(to top, #1eacc7 0%, #4ce2ff 100%)
-	text-shadow: 1px 1px 0 rgba(0, 0, 0, 0.21)
-	color: #ffffff
-	font-size: 14px
-	font-weight: 400
-	text-transform: uppercase
-
 .promo
 	min-height: 800px
-	background: url("/src/image/promo/promo_bg.png") center (center / cover) no-repeat
+	background: url("/src/image/promo/promo_bg.png") center center/cover no-repeat
 	padding: 200px 0 135px 0
-
 	.promo_header
 		color: #ffffff
 		font-weight: 700
@@ -126,7 +103,6 @@ nav
 		line-height: 60px
 		text-align: center
 		margin: 0
-
 	.promo_subheader
 		color: #ffffff
 		font-size: 36px
@@ -136,7 +112,6 @@ nav
 		text-align: center
 		margin: 0
 		margin-top: 22px
-
 	.promo_descr
 		color: #ffffff
 		font-size: 18px
@@ -144,77 +119,53 @@ nav
 		line-height: 24px
 		text-align: center
 		margin-top: 23px
-
 	.promo_btn
 		display: block
 		width: 259px
 		height: 63px
 		margin: 113px auto 0 auto
-		-webkit-box-shadow: inset 0 -4px 0 rgba(0, 0, 0, 0.12)
 		box-shadow: inset 0 -4px 0 rgba(0, 0, 0, 0.12)
 		border: none
 		border-radius: 6px
-		background-image: -webkit-gradient(linear, left bottom, left top, from(#1eacc7), to(#4ce2ff))
 		background-image: linear-gradient(to top, #1eacc7 0%, #4ce2ff 100%)
 		text-shadow: 1px 1px 0 rgba(0, 0, 0, 0.21)
 		color: #ffffff
 		font-size: 18px
 		font-weight: 400
 		text-transform: uppercase
-
 .advantages
 	min-height: 900px
 	padding: 71px 0 65px 0
-
 	.advantages_item
-		display: -webkit-box
-		display: -ms-flexbox
 		display: flex
-		-ms-flex-pack: distribute
 		justify-content: space-around
-		-webkit-box-align: center
-		-ms-flex-align: center
 		align-items: center
 		margin-top: 35px
-
-		.advantages_round
-			display: -webkit-box
-			display: -ms-flexbox
-			display: flex
-			-webkit-box-pack: center
-			-ms-flex-pack: center
-			justify-content: center
-			-webkit-box-align: center
-			-ms-flex-align: center
-			align-items: center
-			width: 113px
-			height: 113px
-			background-color: #1eacc7
-			border-radius: 50%
-
-		.advantages_descr
-			max-width: 341px
-
-			&:last-child
-				-ms-flex-item-align: start
-				align-self: flex-start
-
-			h3
-				line-height: 21px
-				color: #1eacc7
-				font-size: 17px
-				font-weight: 400
-				margin-bottom: 0
-
-			p
-				color: #202020
-				font-size: 15px
-				font-weight: 300
-				line-height: 21px
-				margin: 0
-
-// mobile section start
+	.advantages_round
+		display: flex
+		justify-content: center
+		align-items: center
+		width: 113px
+		height: 113px
+		background-color: #1eacc7
+		border-radius: 50%
+	.advantages_descr
+		max-width: 341px
+		&:last-child
+			align-self: flex-start
+		h3
+			line-height: 21px
+			color: #1eacc7
+			font-size: 17px
+			font-weight: 400
+			margin-bottom: 0
+		p
+			color: #202020
+			font-size: 15px
+			font-weight: 300
+			line-height: 21px
+			margin: 0
 .mobile
 	min-height: 900px
-	background: url("/src/image/mobile_app/bg/mobile_app_bg.jpg") center (center / cover) no-repeat
+	background: url("/src/image/mobile_app/bg/mobile_app_bg.jpg") center center/cover no-repeat
 	padding: 48px 0 80px 0
