--- a/src/sass/style.sass
+++ b/src/sass/style.sass
@@ -10,14 +10,20 @@
 	font-weight: 400
 	text-transform: uppercase
 	padding: 6px 10px 6px 12px
+	text-align: center
 .title
 	color: #222222
 	font-size: 38px
 	font-weight: 700
 	text-transform: uppercase
 	text-align: center
-	margin-top: 38px
+	margin-top: 24px
 	margin-bottom: 0
+.subtitle
+	color: #222222
+	font-size: 17px
+	font-weight: 400
+	text-align: center
 header
 	position: relative
 nav
@@ -93,7 +99,7 @@ nav
 		margin-left: 10px
 .promo
 	min-height: 800px
-	background: url("/src/image/promo/promo_bg.png") center center/cover no-repeat
+	background: url("/src/image/promo/promo_bg.png") center (center/cover) no-repeat
 	padding: 200px 0 135px 0
 	.promo_header
 		color: #ffffff
@@ -166,6 +172,6 @@ nav
 			line-height: 21px
 			margin: 0
 .mobile
-	min-height: 900px
-	background: url("/src/image/mobile_app/bg/mobile_app_bg.jpg") center center/cover no-repeat
+	min-height: 864px
+	background: url("") center (center/cover) no-repeat
 	padding: 48px 0 80px 0
