--- a/src/sass/style.sass
+++ b/src/sass/style.sass
@@ -1,5 +1,6 @@
 *
 	font-family: "Roboto", sans-serif
+
 .label
 	width: 112px
 	height: 24px
@@ -11,6 +12,7 @@
 	text-transform: uppercase
 	padding: 6px 10px 6px 12px
 	text-align: center
+
 .title
 	color: #222222
 	font-size: 38px
@@ -19,13 +21,16 @@
 	text-align: center
 	margin-top: 24px
 	margin-bottom: 0
+
 .subtitle
 	color: #222222
 	font-size: 17px
 	font-weight: 400
 	text-align: center
+
 header
 	position: relative
+
 nav
 	height: 50px
 	background-color: #212121
@@ -33,45 +38,55 @@ nav
 	left: 0
 	right: 0
 	top: 0
+
 .menu
 	display: flex
 	justify-content: space-between
 	padding: 13px 70px
 	margin: 0
 	list-style-type: none
+
 	.menu_item
 		border-right: 2px dotted black
 		padding-right: 28px
+
 		&:last-child
 			border: none
+
 	.menu_link
 		color: #ffffff
 		font-size: 15px
 		font-weight: 300
+
 .subheader
 	position: absolute
 	width: 100%
 	height: 84px
 	background-color: rgba(0, 0, 0, 0.6)
 	margin-top: 50px
+
 	.subheader_logo
 		display: block
 		max-width: 100%
 		margin-top: 16px
+
 	.subheader_official
 		opacity: 0.5
 		color: #ffffff
 		font-size: 13px
 		font-weight: 400
 		margin-top: 6px
+
 	.call_block
 		margin-left: 167px
+
 	.subheader_call
 		color: #ffffff
 		font-size: 12px
 		font-weight: 300
 		margin-top: 19px
 		text-align: right
+
 	a
 		&.subheader_phone
 			display: block
@@ -82,6 +97,7 @@ nav
 			text-align: right
 			margin-top: 8px
 			line-height: 12px
+
 	.subheader_btn
 		width: 172px
 		height: 46px
@@ -95,12 +111,15 @@ nav
 		font-size: 14px
 		font-weight: 400
 		text-transform: uppercase
+
 	.call_btn_block
 		margin-left: 10px
+
 .promo
 	min-height: 800px
-	background: url("/src/image/promo/promo_bg.png") center (center/cover) no-repeat
+	background: url("/src/image/promo/promo_bg.png") center (center / cover) no-repeat
 	padding: 200px 0 135px 0
+
 	.promo_header
 		color: #ffffff
 		font-weight: 700
@@ -109,6 +128,7 @@ nav
 		line-height: 60px
 		text-align: center
 		margin: 0
+
 	.promo_subheader
 		color: #ffffff
 		font-size: 36px
@@ -118,6 +138,7 @@ nav
 		text-align: center
 		margin: 0
 		margin-top: 22px
+
 	.promo_descr
 		color: #ffffff
 		font-size: 18px
@@ -125,6 +146,7 @@ nav
 		line-height: 24px
 		text-align: center
 		margin-top: 23px
+
 	.promo_btn
 		display: block
 		width: 259px
@@ -139,14 +161,17 @@ nav
 		font-size: 18px
 		font-weight: 400
 		text-transform: uppercase
+
 .advantages
 	min-height: 900px
 	padding: 71px 0 65px 0
+
 	.advantages_item
 		display: flex
 		justify-content: space-around
 		align-items: center
 		margin-top: 35px
+
 	.advantages_round
 		display: flex
 		justify-content: center
@@ -155,23 +180,54 @@ nav
 		height: 113px
 		background-color: #1eacc7
 		border-radius: 50%
+
 	.advantages_descr
 		max-width: 341px
+
 		&:last-child
 			align-self: flex-start
+
 		h3
 			line-height: 21px
 			color: #1eacc7
 			font-size: 17px
 			font-weight: 400
 			margin-bottom: 0
+
 		p
 			color: #202020
 			font-size: 15px
 			font-weight: 300
 			line-height: 21px
 			margin: 0
+
 .mobile
-	min-height: 864px
-	background: url("") center (center/cover) no-repeat
+	min-height: 900px
+	background: url("../image/mobile/bg/mobile_bg.png") center (center / cover) no-repeat
 	padding: 48px 0 80px 0
+
+	.row
+		margin-top: 32px
+
+	&_item
+		width: 320px
+		height: 280px
+		margin: 0 auto
+		margin-bottom: 19px
+		&_1
+			background: url("../image/mobile/img/mobile_screen_1.jpg") center (center / cover) no-repeat
+
+		&_2
+			background: url("../image/mobile/img/mobile_screen_2.jpg") center (center / cover) no-repeat
+
+		&_3
+			background: url("../image/mobile/img/mobile_screen_3.jpg") center (center / cover) no-repeat
+
+		&_4
+			background: url("../image/mobile/img/mobile_screen_4.jpg") center (center / cover) no-repeat
+
+		&_5
+			background: url("../image/mobile/img/mobile_screen_5.jpg") center (center / cover) no-repeat
+
+		&_6
+			background: url("../image/mobile/img/mobile_screen_6.jpg") center (center / cover) no-repeat
