--- a/src/sass/style.sass
+++ b/src/sass/style.sass
@@ -214,21 +214,24 @@ nav
 		height: 280px
 		margin: 0 auto
 		margin-bottom: 19px
+		padding-top: 92px
 
 		&_1
-			background: url("../image/mobile/img/mobile_screen_1.jpg") center (center / cover) no-repeat
+			background: url("../image/mobile/img/mobile_screen_1.jpg") center (center/cover) no-repeat
 
 		&_2
-			background: url("../image/mobile/img/mobile_screen_2.jpg") center (center / cover) no-repeat
+			background: url("../image/mobile/img/mobile_screen_2.jpg") center (center/cover) no-repeat
 
 		&_3
-			background: url("../image/mobile/img/mobile_screen_3.jpg") center (center / cover) no-repeat
+			background: url("../image/mobile/img/mobile_screen_3.jpg") center (center/cover) no-repeat
 
 		&_4
-			background: url("../image/mobile/img/mobile_screen_4.jpg") center (center / cover) no-repeat
+			background: url("../image/mobile/img/mobile_screen_4.jpg") center (center/cover) no-repeat
 
 		&_5
-			background: url("../image/mobile/img/mobile_screen_5.jpg") center (center / cover) no-repeat
+			background: url("../image/mobile/img/mobile_screen_5.jpg") center (center/cover) no-repeat
 
 		&_6
-			background: url("../image/mobile/img/mobile_screen_6.jpg") center (center / cover) no-repeat
+			background: url("../image/mobile/img/mobile_screen_6.jpg") center (center/cover) no-repeat
+		&_subtitle
+			
