--- a/src/sass/style.sass
+++ b/src/sass/style.sass
@@ -2,6 +2,12 @@
 $main_color: #1eacc7
 $second_color: #ff5656
 
+// mixin
+=btn_hover
+	&:hover
+		background-image: none
+		background-color: $main_color
+
 *
 	font-family: "Roboto", sans-serif
 
@@ -124,6 +130,7 @@ nav
 		font-size: 14px
 		font-weight: 400
 		text-transform: uppercase
+		+btn_hover
 
 .promo
 	min-height: 800px
@@ -171,6 +178,7 @@ nav
 		font-size: 18px
 		font-weight: 400
 		text-transform: uppercase
+		+btn_hover
 
 .advantages
 	min-height: 900px
