--- a/src/sass/style.sass
+++ b/src/sass/style.sass
@@ -327,6 +327,29 @@ nav
 		background-color: #070716
 		z-index: 1
 .required
-	padding: 68px 0 84px 0
+	padding: 35px 0 84px 0
 	&_block
 		margin: 33px 0
+	&_title
+		color: #1ca8c3
+		font-size: 22px
+		font-weight: 400
+		margin: 0
+	&_list
+		list-style-type: none
+		padding-left: 50px
+		margin-top: 22px
+		li
+			color: #222222
+			font-size: 17px
+			font-weight: 300
+			line-height: 24px
+			margin-bottom: 10px
+			&:last-child
+				margin-bottom: 0
+			&::before
+				content: ''
+				display: block
+				width: 21px
+				height: 20px
+				background: url("../image/required/check_blue.svg") center (center/cover) no-repeat
