--- a/src/sass/style.sass
+++ b/src/sass/style.sass
@@ -327,7 +327,7 @@ nav
 		background-color: #070716
 		z-index: 1
 .required
-	padding: 35px 0 84px 0
+	padding: 68px 0 42px 0
 	&_block
 		margin: 33px 0
 	&_title
@@ -340,6 +340,7 @@ nav
 		padding-left: 50px
 		margin-top: 22px
 		li
+			position: relative
 			color: #222222
 			font-size: 17px
 			font-weight: 300
@@ -349,7 +350,22 @@ nav
 				margin-bottom: 0
 			&::before
 				content: ''
+				position: absolute
+				top: 3px
+				left: -32px
 				display: block
 				width: 21px
 				height: 20px
+				border-radius: 50%
 				background: url("../image/required/check_blue.svg") center (center/cover) no-repeat
+	&_descr
+		font-size: 17px
+		color: #1ca8c3
+		font-weight: 300
+	.warning
+		.required_title
+			color: $second_color
+		.required_list
+			li
+				&::before
+					background: url('../image/required/check_red.svg') center (center/cover) no-repeat
