--- a/src/sass/style.sass
+++ b/src/sass/style.sass
@@ -50,36 +50,34 @@ $second_color: #ff5656
 		color: #fff
 		z-index: 2
 
-header
+.header
 	position: relative
+	&_nav
+		height: 50px
+		background-color: #212121
+		position: fixed
+		left: 0
+		top: 0
+		width: 100%
+		z-index: 10
+		&_menu
+			display: flex
+			justify-content: space-between
+			padding: 13px 70px
+			margin: 0
+			list-style-type: none
 
-nav
-	height: 50px
-	background-color: #212121
-	position: fixed
-	left: 0
-	top: 0
-	width: 100%
-	z-index: 10
+			&_item
+				border-right: 2px dotted black
+				padding-right: 28px
 
-.menu
-	display: flex
-	justify-content: space-between
-	padding: 13px 70px
-	margin: 0
-	list-style-type: none
+				&:last-child
+					border: none
 
-	&_item
-		border-right: 2px dotted black
-		padding-right: 28px
-
-		&:last-child
-			border: none
-
-	&_link
-		color: #ffffff
-		font-size: 15px
-		font-weight: 300
+			&_link
+				color: #ffffff
+				font-size: 15px
+				font-weight: 300
 
 .subheader
 	position: absolute
@@ -369,3 +367,31 @@ nav
 			li
 				&::before
 					background: url('../image/required/check_red.svg') center (center/cover) no-repeat
+.sities
+	position: relative
+	min-height: 717px
+	padding: 49px 0
+	background: url('../image/sities/sities_bg.png') center (center/cover) no-repeat
+	&_link
+		position: absolute
+		left: 50%
+		transform: translateX(-50%)
+		bottom: 49px
+		color: #1fbad6
+		font-size: 15px
+		font-weight: 400
+		text-transform: uppercase
+		&:hover
+			text-decoration: none
+			color: #fff
+
+.footer
+	min-height: 200px // удалить TODO :)
+	padding: 0 23px
+	box-shadow: inset 0 -8px 0 #000000
+	&_delimetr
+		width: 299px
+		height: 4px
+		background-color: #1fbad6
+		margin: 0 auto
+		margin-top: 14px
