--- a/src/sass/style.sass
+++ b/src/sass/style.sass
@@ -389,6 +389,9 @@ $second_color: #ff5656
 	min-height: 200px // удалить TODO :)
 	padding: 0 23px
 	box-shadow: inset 0 -8px 0 #000000
+	a
+		&:hover
+			text-decoration: none
 	&_delimetr
 		width: 299px
 		height: 4px
