footer ver.1 complited

--- a/src/sass/style.sass
+++ b/src/sass/style.sass
@@ -398,3 +398,47 @@ $second_color: #ff5656
 		background-color: #1fbad6
 		margin: 0 auto
 		margin-top: 14px
+	&_wrapper
+		display: flex
+		justify-content: space-between
+		padding-top: 32px
+	&_wrapper > div
+		width: 33%
+		&:last-child
+			display: flex
+			justify-content: flex-end
+			a
+				margin-left: 9px
+				&:first-child
+					margin-left: 0
+	&_social_link
+		margin-right: 9px
+	&_links
+		width: 21% !important
+		&_main
+			display: flex
+			justify-content: space-between
+			padding: 0 10px
+			a
+				color: #070716
+				font-size: 15px
+				font-weight: 300
+				text-transform: uppercase
+		&_sub
+			display: flex
+			justify-content: space-between
+			margin-top: 10px
+			a
+				color: #999999
+				font-size: 11px
+				font-weight: 300
+				text-transform: uppercase
+		&_lang
+			display: block
+			margin: 0 auto
+			margin-top: 19px
+			color: #1fbad6
+			font-size: 11px
+			font-weight: 400
+			text-transform: uppercase
+			text-align: center
