изменил разметку в footer

--- a/src/sass/style.sass
+++ b/src/sass/style.sass
@@ -414,7 +414,8 @@ $second_color: #ff5656
 	&_social_link
 		margin-right: 9px
 	&_links
-		width: 21% !important
+		width: 390px
+		margin: 0 auto
 		&_main
 			display: flex
 			justify-content: space-between
