social style add, img change at font awesome

--- a/src/sass/style.sass
+++ b/src/sass/style.sass
@@ -411,8 +411,22 @@ $second_color: #ff5656
 				margin-left: 9px
 				&:first-child
 					margin-left: 0
+	&_social
+		display: flex
+		justify-content: space-between
+		width: 160px
 	&_social_link
 		margin-right: 9px
+		display: flex
+		justify-content: center
+		align-items: center
+		margin: 0 4px
+		width: 32px
+		height: 32px
+		background-color: #070716
+		border-radius: 100%
+		i
+			color: #fff
 	&_links
 		width: 390px
 		margin: 0 auto
