added icomoon fonts social icon facebok

--- a/src/sass/style.sass
+++ b/src/sass/style.sass
@@ -427,6 +427,8 @@ $second_color: #ff5656
 		border-radius: 100%
 		i
 			color: #fff
+		span
+			color: #ffffff
 	&_links
 		width: 390px
 		margin: 0 auto
