deleted icomoon font, rename delimetr at divider

--- a/src/sass/style.sass
+++ b/src/sass/style.sass
@@ -421,7 +421,7 @@ $second_color: #ff5656
 		&:hover
 			text-decoration: none
 
-	&_delimetr
+	&_divider
 		width: 299px
 		height: 4px
 		background-color: #1fbad6
