--- a/src/sass/style.sass
+++ b/src/sass/style.sass
@@ -1,505 +1,6 @@
-// переменные для цвета
-$main_color: #1eacc7
-$second_color: #ff5656
-
-// mixin
-=btn_hover
-	&:hover
-		background-image: none
-		background-color: $main_color
-
 *
 	font-family: "Roboto", sans-serif
 
-.label
-	position: relative
-	width: 112px
-	height: 24px
-	background-color: #000000
-	margin: 0 auto
-	color: #ffffff
-	font-size: 11px
-	font-weight: 400
-	text-transform: uppercase
-	padding: 6px 10px 6px 12px
-	text-align: center
-	z-index: 2
-
-	&_white
-		background-color: #fff
-		color: #000
-
-.title
-	position: relative
-	color: #222222
-	font-size: 38px
-	font-weight: 700
-	text-transform: uppercase
-	text-align: center
-	margin-top: 24px
-	margin-bottom: 0
-	z-index: 2
-
-	&_white
-		color: #fff
-
-.subtitle
-	position: relative
-	color: #222222
-	font-size: 17px
-	font-weight: 400
-	text-align: center
-
-	&_white
-		color: #fff
-		z-index: 2
-
-.header
-	position: relative
-
-	&_nav
-		height: 50px
-		background-color: #212121
-		position: fixed
-		left: 0
-		top: 0
-		width: 100%
-		z-index: 10
-
-		&_menu
-			display: flex
-			justify-content: space-between
-			padding: 13px 70px
-			margin: 0
-			list-style-type: none
-
-			&_item
-				border-right: 2px dotted black
-				padding-right: 28px
-
-				&:last-child
-					border: none
-
-			&_link
-				color: #ffffff
-				font-size: 15px
-				font-weight: 300
-
-.subheader
-	position: absolute
-	width: 100%
-	height: 84px
-	background-color: rgba(0, 0, 0, 0.6)
-	margin-top: 50px
-
-	&_logo
-		display: block
-		max-width: 100%
-		margin-top: 16px
-
-	&_official
-		opacity: 0.5
-		color: #ffffff
-		font-size: 13px
-		font-weight: 400
-		margin-top: 6px
-
-	&_call
-		color: #ffffff
-		font-size: 12px
-		font-weight: 300
-		margin-top: 19px
-		text-align: right
-
-	&_phone
-		display: block
-		color: #ffffff
-		font-size: 22px
-		font-weight: 400
-		text-transform: uppercase
-		text-align: right
-		margin-top: 8px
-		line-height: 12px
-
-	&_btn
-		width: 172px
-		height: 46px
-		margin-top: 19px
-		box-shadow: inset 0 -3px 0 rgba(0, 0, 0, 0.12)
-		border: none
-		border-radius: 6px
-		background-image: linear-gradient(to top, $main_color 0%, #4ce2ff 100%)
-		text-shadow: 1px 1px 0 rgba(0, 0, 0, 0.21)
-		color: #ffffff
-		font-size: 14px
-		font-weight: 400
-		text-transform: uppercase
-		+btn_hover
-
-.promo
-	min-height: 800px
-	background: url("/src/image/promo/promo_bg.png") center (center / cover) no-repeat
-	padding: 200px 0 135px 0
-
-	&_header
-		color: #ffffff
-		font-weight: 700
-		text-transform: uppercase
-		font-size: 60px
-		line-height: 60px
-		text-align: center
-		margin: 0
-
-	&_subheader
-		color: #ffffff
-		font-size: 36px
-		font-weight: 700
-		text-transform: uppercase
-		line-height: 36px
-		text-align: center
-		margin: 0
-		margin-top: 22px
-
-	&_descr
-		color: #ffffff
-		font-size: 18px
-		font-weight: 400
-		line-height: 24px
-		text-align: center
-		margin-top: 23px
-
-	&_btn
-		display: block
-		width: 259px
-		height: 63px
-		margin: 113px auto 0 auto
-		box-shadow: inset 0 -4px 0 rgba(0, 0, 0, 0.12)
-		border: none
-		border-radius: 6px
-		background-image: linear-gradient(to top, $main_color 0%, #4ce2ff 100%)
-		text-shadow: 1px 1px 0 rgba(0, 0, 0, 0.21)
-		color: #ffffff
-		font-size: 18px
-		font-weight: 400
-		text-transform: uppercase
-		+btn_hover
-
-.advantages
-	min-height: 900px
-	padding: 71px 0 65px 0
-
-	&_item
-		display: flex
-		justify-content: space-around
-		align-items: center
-		margin-top: 35px
-
-	&_round
-		display: flex
-		justify-content: center
-		align-items: center
-		width: 113px
-		height: 113px
-		background-color: $main_color
-		border-radius: 50%
-
-	&_descr
-		width: 341px
-
-		&:last-child
-			align-self: flex-start
-
-		h3
-			line-height: 21px
-			color: $main_color
-			font-size: 17px
-			font-weight: 400
-			margin-bottom: 0
-
-		p
-			color: #202020
-			font-size: 15px
-			font-weight: 300
-			line-height: 21px
-			margin: 0
-
-.mobile
-	min-height: 900px
-	background: url("../image/mobile/bg/mobile_bg.png") center (center / cover) no-repeat
-	padding: 48px 0 80px 0
-
-	.row
-		margin-top: 32px
-
-	&_item
-		position: relative
-		width: 320px
-		height: 280px
-		margin: 0 auto
-		margin-bottom: 19px
-		padding-top: 92px
-
-		&_1
-			background: url("../image/mobile/img/mobile_screen_1.jpg") center (center / cover) no-repeat
-
-		&_2
-			background: url("../image/mobile/img/mobile_screen_2.jpg") center (center / cover) no-repeat
-
-		&_3
-			background: url("../image/mobile/img/mobile_screen_3.jpg") center (center / cover) no-repeat
-
-		&_4
-			background: url("../image/mobile/img/mobile_screen_4.jpg") center (center / cover) no-repeat
-
-		&_5
-			background: url("../image/mobile/img/mobile_screen_5.jpg") center (center / cover) no-repeat
-
-		&_6
-			background: url("../image/mobile/img/mobile_screen_6.jpg") center (center / cover) no-repeat
-
-		&_subtitle
-			color: #ffffff
-			font-size: 24px
-			font-weight: 400
-			line-height: 31px
-			text-transform: uppercase
-			text-align: center
-
-		&_plus
-			position: absolute
-			bottom: 35px
-			left: 50%
-			transform: translateX(-50%)
-			display: flex
-			justify-content: center
-			align-items: center
-			width: 26px
-			height: 26px
-			background-color: #000000
-			border-radius: 50%
-			cursor: pointer
-
-			&::before
-				content: ""
-				display: block
-				width: 14px
-				height: 2px
-				background-color: $main_color
-				transition: 0.3s
-
-			&::after
-				content: ""
-				position: absolute
-				left: 50%
-				transform: translateX(-50%)
-				display: block
-				height: 14px
-				width: 2px
-				background-color: $main_color
-				transition: 0.3s
-
-			&:hover
-				width: 30px
-				height: 30px
-				background-color: $main_color
-
-				&::before, &::after
-					background-color: $second_color
-
-.choice
-	position: relative
-	min-height: 896px
-	background: url("../image/mobile/bg/mobile_bg.png") center (center / cover) no-repeat
-	padding: 57px 0 138px 0
-
-	.img_block
-		position: relative
-		width: 62%
-		margin: 22px auto 0 auto
-
-	&_img
-		position: relative
-		display: block
-		width: 100%
-		z-index: 2
-
-	&_descr
-		text-align: center
-		color: #222222
-		font-size: 17px
-		font-weight: 300
-		line-height: 24px
-
-	.black_bg
-		position: absolute
-		top: 0
-		left: 0
-		height: 50%
-		width: 100%
-		background-color: #070716
-		z-index: 1
-
-.required
-	padding: 68px 0 42px 0
-
-	&_block
-		margin: 33px 0
-
-	&_title
-		color: #1ca8c3
-		font-size: 22px
-		font-weight: 400
-		margin: 0
-
-	&_list
-		list-style-type: none
-		padding-left: 50px
-		margin-top: 22px
-
-		li
-			position: relative
-			color: #222222
-			font-size: 17px
-			font-weight: 300
-			line-height: 24px
-			margin-bottom: 10px
-
-			&:last-child
-				margin-bottom: 0
-
-			&::before
-				content: ""
-				position: absolute
-				top: 3px
-				left: -32px
-				display: block
-				width: 21px
-				height: 20px
-				border-radius: 50%
-				background: url("../image/required/check_blue.svg") center (center / cover) no-repeat
-
-	&_descr
-		font-size: 17px
-		color: #1ca8c3
-		font-weight: 300
-
-	.warning
-		.required_title
-			color: $second_color
-
-		.required_list
-			li
-				&::before
-					background: url("../image/required/check_red.svg") center (center / cover) no-repeat
-
-.sities
-	position: relative
-	min-height: 717px
-	padding: 49px 0
-	background: url("../image/sities/sities_bg.png") center (center / cover) no-repeat
-
-	&_link
-		position: absolute
-		left: 50%
-		transform: translateX(-50%)
-		bottom: 49px
-		color: #1fbad6
-		font-size: 15px
-		font-weight: 400
-		text-transform: uppercase
-
-		&:hover
-			text-decoration: none
-			color: #fff
-
-.footer
-	min-height: 200px
-	padding: 0 23px
-	box-shadow: inset 0 -8px 0 #000000
-
-	a
-		&:hover
-			text-decoration: none
-
-	&_divider
-		width: 299px
-		height: 4px
-		background-color: #1fbad6
-		margin: 0 auto
-		margin-top: 14px
-
-	&_wrapper
-		display: flex
-		justify-content: space-between
-		padding-top: 32px
-
-	&_wrapper > div
-		width: 33%
-
-		&:last-child
-			display: flex
-			justify-content: flex-end
-
-			a
-				margin-left: 9px
-
-				&:first-child
-					margin-left: 0
-
-	&_social
-		display: flex
-		justify-content: space-between
-		width: 160px
-
-	&_social_link
-		margin-right: 9px
-		display: flex
-		justify-content: center
-		align-items: center
-		margin: 0 4px
-		width: 32px
-		height: 32px
-		background-color: #070716
-		border-radius: 100%
-
-		i
-			color: #fff
-
-		span
-			color: #ffffff
-
-	&_links
-		width: 390px
-		margin: 0 auto
-
-		&_main
-			display: flex
-			justify-content: space-between
-			padding: 0 10px
-
-			a
-				color: #070716
-				font-size: 15px
-				font-weight: 300
-				text-transform: uppercase
-
-		&_sub
-			display: flex
-			justify-content: space-between
-			margin-top: 10px
-
-			a
-				color: #999999
-				font-size: 11px
-				font-weight: 300
-				text-transform: uppercase
-
-		&_lang
-			display: block
-			margin: 0 auto
-			margin-top: 19px
-			color: #1fbad6
-			font-size: 11px
-			font-weight: 400
-			text-transform: uppercase
-			text-align: center
+@import "variables"
+@import "mixins"
+@import "general"
