from 768 px to 991px adaptive

--- a/src/sass/_general.sass
+++ b/src/sass/_general.sass
@@ -43,6 +43,7 @@
 
 .header
 	position: relative
+	height: 50px
 
 	&_nav
 		height: 50px
@@ -63,8 +64,9 @@
 			&_item
 				border-right: 2px dotted black
 				padding-right: 28px
-
+				
 				&:last-child
+					padding-right: 0
 					border: none
 
 			&_link
