--- a/src/sass/_media.sass
+++ b/src/sass/_media.sass
@@ -85,4 +85,24 @@
 	.header
 		&_nav
 			&_menu
+				flex-direction: column
+				justify-content: center
+				align-items: center
 				position: fixed
+				top: 0
+				left: -100%
+				width: 50%
+				height: 100vh
+				padding: 20px 15px
+				background-color: rgba(0,0,0,.8)
+				transition: .6s all
+				&_active
+					left: 0
+
+				&_item
+					margin: 10px 0
+					padding-right: 0
+					border: none
+
+				&_link
+					font-size: 20px
