--- a/src/sass/_general.sass
+++ b/src/sass/_general.sass
@@ -54,6 +54,9 @@
 		width: 100%
 		z-index: 10
 
+		.hamburger
+			display: none
+
 		&_menu
 			display: flex
 			justify-content: space-between
@@ -64,7 +67,7 @@
 			&_item
 				border-right: 2px dotted black
 				padding-right: 28px
-				
+
 				&:last-child
 					padding-right: 0
 					border: none
