--- a/src/sass/_media.sass
+++ b/src/sass/_media.sass
@@ -84,6 +84,34 @@
 @media (max-width: 767px)
 	.header
 		&_nav
+
+			.hamburger
+				display: block
+				position: absolute
+				top: 50%
+				transform: translateY(-50%)
+				right: 10px
+				width: 26px
+
+				span
+					display: block
+					width: 100%
+					height: 2px
+					background-color: #fff
+					margin-bottom: 3px
+					transition: 0.5s all
+
+				&_active
+					span
+						margin-bottom: -2px
+
+						&:nth-child(1)
+							transform: translateY(3px) rotate(-45deg)
+						&:nth-child(2)
+							display: none
+						&:nth-child(3)
+							transform: translateY(3px) rotate(45deg)
+
 			&_menu
 				flex-direction: column
 				justify-content: center
