стилизация 320px header, promo, advantages blocks

--- a/src/sass/_general.sass
+++ b/src/sass/_general.sass
@@ -198,9 +198,6 @@
 	&_descr
 		width: 341px
 
-		&:last-child
-			align-self: flex-start
-
 		h3
 			line-height: 21px
 			color: $main_color
@@ -495,3 +492,6 @@
 			font-weight: 400
 			text-transform: uppercase
 			text-align: center
+// стиль для скрытия элементов
+.xs_visible
+	display: none
