--- a/src/sass/_media.sass
+++ b/src/sass/_media.sass
@@ -92,6 +92,7 @@
 				transform: translateY(-50%)
 				right: 10px
 				width: 26px
+				height: 15px
 
 				span
 					display: block
@@ -124,6 +125,7 @@
 				padding: 20px 15px
 				background-color: rgba(0,0,0,.8)
 				transition: .6s all
+
 				&_active
 					left: 0
 
@@ -134,3 +136,146 @@
 
 				&_link
 					font-size: 20px
+
+	.xs_hidden
+		display: none
+
+	.xs_visible
+		display: block
+
+	.subheader
+
+		&_phone
+			font-size: 16px
+			font-weight: 400
+			margin-top: 11px
+			text-transform: uppercase
+			text-align: center
+
+		&_btn
+			display: block
+			width: 200px
+			height: 40px
+			font-size: 14px
+			margin: 0 auto
+			margin-top: 10px
+			border-radius: 6px
+
+	.promo
+		min-height: 400px
+		padding: 128px 0 36px 0
+
+		&_header
+			line-height: 3rem
+
+		&_subheader
+			font-size: 30px
+			line-height: 2.4rem
+			margin-top: 11px
+
+		&_btn
+			margin-top: 70px
+
+	.advantages
+		padding: 50px 0
+
+		&_descr
+			width: 360px
+
+	.title
+		font-size: 1.6rem
+
+@media (max-width: 575px)
+
+	.title
+		font-size: 0.9rem
+		margin-top: 15px
+		line-height: 0.9rem
+
+	.header
+		height: 30px
+
+		&_nav
+			height: 30px
+			box-shadow: 0 1px 0 #3c3c3c
+
+			.hamburger
+				top: 60%
+
+				&_active
+					span
+						margin-bottom: -2px
+
+						&:nth-child(1)
+							transform: translateY(5px) rotate(-45deg)
+
+						&:nth-child(3)
+							transform: translateY(5px) rotate(45deg)
+
+			&_menu
+				width: 70%
+				&_link
+					font-size: 14px
+
+	.subheader
+		height: 60px
+		top: 30px
+		margin-top: 0
+
+		&_logo
+			margin-top: 20px
+
+		&_official
+			display: none
+
+		&_phone
+			font-size: 12px
+
+		&_btn
+			width: 110px
+			height: 22px
+			margin-top: 7px
+			border-radius: 4px
+			font-size: 10px
+
+	.promo
+		min-height: 400px
+		padding: 93px 0 35px 0
+		background-position: 62% -28px
+
+		&_header
+			font-size: 30px
+			line-height: 2.4rem
+			padding: 0 24px
+
+		&_subheader
+			font-size: 20px
+			line-height: 1.8rem
+
+		&_descr
+			display: none
+
+		&_btn
+			width: 210px
+			height: 50px
+			font-size: 16px
+			margin: 0 auto
+			margin-top: 72px
+
+	.advantages
+
+		padding: 22px 0 36px 0
+
+		&_item
+			margin-top: 26px
+
+		&_round
+			width: 100px
+			height: 100px
+
+		&_descr
+			width: 100%
+			margin-top: 26px
+
+			h3
+				font-size: 16px
