--- a/src/sass/_media.sass
+++ b/src/sass/_media.sass
@@ -1,4 +1,4 @@
-@media (max-width: 1200px)
+@media (max-width: 1199px)
 	.header
 		&_nav
 			&_menu
@@ -26,6 +26,21 @@
 
 		&_descr
 			width: 300px
+
+	.mobile
+
+		&_item
+			width: 290px
+			height: 260px
+
+			&_subtitle
+				font-size: 20px
+
+	.choice
+		padding-top: 45px
+
+		.img_block
+			margin-top: 75px
 
 @media (max-width: 991px)
 
@@ -79,7 +94,16 @@
 		&_descr
 			margin-top: 20px
 			width: 320px
-			//text-align: justify
+
+	.choice
+		min-height: 700px
+
+		.img_block
+			width: 70%
+			margin-top: 17px
+
+	.required
+		padding-top: 48px
 
 @media (max-width: 767px)
 	.header
@@ -185,12 +209,33 @@
 	.title
 		font-size: 1.6rem
 
+	.mobile
+
+		&_item
+			&_6
+				margin-bottom: 0
+
+			&_subtitle
+				font-size: 20px
+				padding: 0 10px
+
+	.choice
+		min-height: 600px
+		padding-bottom: 128px
+
+		.img_block
+			width: 90%
+
+	.required
+		padding: 25px 0
+
 @media (max-width: 575px)
 
 	.title
-		font-size: 0.9rem
+		font-size: 1rem
 		margin-top: 15px
-		line-height: 0.9rem
+		line-height: 2rem
+		white-space: nowrap
 
 	.header
 		height: 30px
@@ -279,3 +324,79 @@
 
 			h3
 				font-size: 16px
+
+	.mobile
+
+		padding: 36px 0 43px 0
+		background-image: none
+
+		.subtitle
+			font-size: 14px
+			line-height: 21px
+			margin-top: 11px
+
+		&_item
+			width: 280px
+			height: 240px
+			padding: 81px 0 0
+			margin-bottom: 30px
+			&_6
+				margin-bottom: 0
+
+			&_subtitle
+				width: 210px
+				font-size: 18px
+				line-height: 31px
+				padding: 0
+
+			&_plus
+				bottom: 28px
+
+	.choice
+		min-height: 500px
+		padding-bottom: 70px
+		padding-top: 25px
+
+		.img_block
+			width: 100%
+
+	.required
+
+		&_title
+			font-size: 16px
+			margin-top: 0
+
+		&_block
+			margin-top: 0.5rem
+
+		&_list
+			li
+				font-size: 14px
+				margin-bottom: 4px
+
+@media (max-width: 374px)
+
+	.choice
+		min-height: 390px
+		background: none
+		padding-bottom: 33px
+
+		.black_bg
+			height: 100%
+
+		.title
+			display: none
+		.subtitle
+			display: none
+
+		.img_block
+			margin-top: 35px
+
+		&_descr
+			position: relative
+			color: #ffffff
+			margin-top: 16px
+			z-index: 2
+
+	.required
+		padding: 25px 0
