--- a/src/sass/_media.sass
+++ b/src/sass/_media.sass
@@ -105,6 +105,13 @@
 	.required
 		padding-top: 48px
 
+	.sities
+		min-height: 360px
+		padding: 32px 0
+
+		.title
+			margin-top: 16px
+
 @media (max-width: 767px)
 	.header
 		&_nav
@@ -373,6 +380,16 @@
 			li
 				font-size: 14px
 				margin-bottom: 4px
+
+	.sities
+		padding: 25px 0
+
+		.subtitle
+			font-size: 14px
+
+		&_link
+			bottom: 30px
+			white-space: nowrap
 
 @media (max-width: 374px)
 
