стилизация mobile image

--- a/src/sass/_general.sass
+++ b/src/sass/_general.sass
@@ -493,6 +493,14 @@
 			font-weight: 400
 			text-transform: uppercase
 			text-align: center
+
+	&_mobile
+		img
+			width: 82px
+			height: 24px
+			display: inline-block
+			border-radius: 8px
+
 // стиль для скрытия элементов
 .xs_visible
 	display: none
