adapt menu to 575px

--- a/src/sass/_media.sass
+++ b/src/sass/_media.sass
@@ -317,8 +317,14 @@
 
 			&_menu
 				width: 70%
+
+				&_item
+					width: 100%
+					text-align: center
 				&_link
 					font-size: 14px
+					width: 100%
+					padding: 20px 0
 
 	.subheader
 		height: 60px
