delete outline style button

--- a/src/sass/_general.sass
+++ b/src/sass/_general.sass
@@ -126,6 +126,7 @@
 		font-size: 14px
 		font-weight: 400
 		text-transform: uppercase
+		outline: none
 		+btn_hover
 
 .promo
@@ -174,6 +175,7 @@
 		font-size: 18px
 		font-weight: 400
 		text-transform: uppercase
+		outline: none
 		+btn_hover
 
 .advantages
