--- a/src/sass/_general.sass
+++ b/src/sass/_general.sass
@@ -128,6 +128,9 @@
 		text-transform: uppercase
 		outline: none
 		+btn_hover
+		&_active
+			outline: none
+			background-color: #168096
 
 .promo
 	min-height: 800px
@@ -177,6 +180,9 @@
 		text-transform: uppercase
 		outline: none
 		+btn_hover
+		&_active
+			outline: none
+			background-color: #168096
 
 .advantages
 	min-height: 900px
