added style btn:visited

--- a/src/sass/_general.sass
+++ b/src/sass/_general.sass
@@ -131,6 +131,9 @@
 		&_active
 			outline: none
 			background-color: #168096
+		&_visited
+			outline: none
+			background-color: #168096
 
 .promo
 	min-height: 800px
@@ -181,6 +184,9 @@
 		outline: none
 		+btn_hover
 		&_active
+			outline: none
+			background-color: #168096
+		&_visited
 			outline: none
 			background-color: #168096
 
