btn style change added important

--- a/src/sass/_general.sass
+++ b/src/sass/_general.sass
@@ -129,7 +129,7 @@
 		outline: none
 		+btn_hover
 		&_active
-			outline: none
+			outline: none !important
 			background-color: #168096
 		&_visited
 			outline: none
@@ -181,13 +181,13 @@
 		font-size: 18px
 		font-weight: 400
 		text-transform: uppercase
-		outline: none
+		outline: none !important
 		+btn_hover
 		&_active
-			outline: none
+			outline: none !important
 			background-color: #168096
 		&_visited
-			outline: none
+			outline: none !important
 			background-color: #168096
 
 .advantages
