added outline none to btn_active

--- a/src/sass/_media.sass
+++ b/src/sass/_media.sass
@@ -359,6 +359,7 @@
 				outline: none
 			&:active
 				background-image: linear-gradient(to top, $main_color 0%, #178fa7 100%)
+				outline: none
 
 	.promo
 		min-height: 400px
@@ -388,6 +389,7 @@
 				outline: none
 			&:active
 				background-image: linear-gradient(to top, $main_color 0%, #178fa7 100%)
+				outline: none
 
 	.advantages
 
