--- a/src/sass/_general.sass
+++ b/src/sass/_general.sass
@@ -137,7 +137,7 @@
 
 .promo
 	min-height: 800px
-	background: url("./image/promo/promo_bg.png") center (center / cover) no-repeat
+	background: url("image/promo/promo_bg.png") center (center / cover) no-repeat
 	padding: 200px 0 135px 0
 
 	&_header
