added padding-right 5px advantages last-child img

--- a/src/sass/_general.sass
+++ b/src/sass/_general.sass
@@ -199,6 +199,11 @@
 		justify-content: space-around
 		align-items: center
 		margin-top: 35px
+	&_row
+		> div:last-child
+			> div.advantages_round
+				> img
+					padding-right: 5px
 
 	&_round
 		display: flex
